# inflation_graphs

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  VISUALIZATION_GUIDE.md  brazil-inflation-project-plan.md  main.py  pyproject.toml  run.bat  run.ps1
.claude/: settings.local.json
.claude/agents/: brazil-inflation-data-manager.md  config-security-agent.md  vizionary-agent.md
data/processed/: brazil_inflation_data.parquet  brazil_inflation_essential.csv  brazil_inflation_fred_20250904_161616.parquet  hyperinflation_period.parquet  inflation_summary_stats.parquet  modern_period.parquet  view_annual.parquet  view_crisis.parquet  view_hyperinflation.parquet  view_modern.parquet  view_quarterly.parquet
data/raw/: brazil_inflation_fred_20250904_161441.json  brazil_inflation_fred_20250904_161514.json  brazil_inflation_fred_20250904_161616.json
output/: brazil_inflation_chart_data.parquet  comprehensive_dashboard.html
output/exports/academic/: export_metadata.json
output/exports/presentation/: export_metadata.json
output/exports/print/: export_metadata.json
output/exports/web/: export_metadata.json
src/brazil_inflation_graphs/: advanced_analytics.py  comparative_analysis.py  config.py  dashboard.py  data_fetcher.py  data_manager.py  data_processor.py  enhanced_visualizer.py  enhanced_visualizer_backup.py  exceptions.py  export_pipeline.py  exporter.py  main.py  models.py  monetary_policy.py  sectoral_visualizer.py  visualizer.py
